--- a/package.json
+++ b/package.json
@@ -14,19 +14,17 @@
   },
   "main": "haste",
   "dependencies": {
-    "busboy": "0.2.4",
+    "busboy": "1.5.0",
     "connect": "^3.7.0",
     "connect-ratelimit": "0.0.7",
     "connect-route": "0.1.5",
-    "pg": "^8.0.0",
-    "redis": "0.8.1",
-    "redis-url": "0.1.0",
-    "st": "^2.0.0",
-    "uglify-js": "3.1.6",
-    "winston": "^2.0.0"
+    "st": "^3.0.0",
+    "uglify-js": "3.15.3",
+    "winston": "^2.0.0",
+    "memcached": "^2.2.2"
   },
   "devDependencies": {
-    "mocha": "^8.1.3"
+    "mocha": "^9.2.2"
   },
   "bundledDependencies": [],
   "bin": {
